--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "server=localhost;userid=rfcruz;password=roger123@;database=saleswebmvcappdb"
+    "SalesWebMVCContext": "server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
   }
 }
